@@ -22,20 +22,31 @@
 // THE SOFTWARE.
 package com.microsoft.identity.common.internal.net;
 
+import androidx.annotation.NonNull;
+
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
+import com.google.gson.TypeAdapter;
+import com.google.gson.TypeAdapterFactory;
 import com.google.gson.reflect.TypeToken;
+import com.google.gson.stream.JsonReader;
+import com.google.gson.stream.JsonToken;
+import com.google.gson.stream.JsonWriter;
 import com.microsoft.identity.common.WarningType;
 import com.microsoft.identity.common.internal.commands.parameters.IHasExtraParameters;
 import com.microsoft.identity.common.internal.logging.Logger;
 import com.microsoft.identity.common.internal.util.StringUtil;
 
+import java.io.IOException;
+import java.io.Reader;
 import java.io.UnsupportedEncodingException;
 import java.lang.reflect.Type;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
+import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.StringTokenizer;
 import java.util.TreeMap;
@@ -47,6 +58,124 @@ public final class ObjectMapper {
      */
     public static final String ENCODING_SCHEME = "UTF-8";
     public static final String TAG = ObjectMapper.class.getSimpleName();
+    public static final Gson GSON = new GsonBuilder()
+            .registerTypeAdapterFactory(new UnknownParamTypeAdapterFactory())
+            .create();
+
+    public static class UnknownParamTypeAdapterFactory implements TypeAdapterFactory {
+        @Override
+        public <T> TypeAdapter<T> create(Gson gson, TypeToken<T> type) {
+            final TypeAdapter<T> adapter = gson.getDelegateAdapter(this, type);
+
+            if (IHasExtraParameters.class.isAssignableFrom(type.getRawType())) {
+                return new TypeAdapter<T>() {
+                    @Override
+                    public void write(JsonWriter out, T value) throws IOException {
+                        adapter.write(out, value);
+                    }
+
+                    @Override
+                    public T read(final JsonReader in) throws IOException {
+                        final Map<String, String> otherKeys = new LinkedHashMap<>();
+                        final Reader reader = new Reader() {
+                            @Override
+                            public int read(char[] cbuf, int off, int len) throws IOException {
+                                return 0;
+                            }
+
+                            @Override
+                            public void close() throws IOException {
+
+                            }
+                        };
+                        final JsonReader jsonReader = new JsonReader(reader) {
+                            String lastName = null;
+                            public void beginArray() throws IOException {
+                                in.beginArray();
+                            }
+
+                            public void endArray() throws IOException {
+                                in.endArray();
+                            }
+
+                            public void beginObject() throws IOException {
+                                in.beginObject();
+                            }
+
+                            public void endObject() throws IOException {
+                                in.endObject();
+                            }
+
+                            public boolean hasNext() throws IOException {
+                                return in.hasNext();
+                            }
+
+                            public JsonToken peek() throws IOException {
+                                return in.peek();
+                            }
+
+                            public String nextName() throws IOException {
+                                final String name = in.nextName();
+                                lastName = name;
+                                return name;
+                            }
+
+                            public String nextString() throws IOException {
+                                return in.nextString();
+                            }
+
+                            public boolean nextBoolean() throws IOException {
+                                return in.nextBoolean();
+                            }
+
+                            public void nextNull() throws IOException {
+                                in.nextNull();
+                            }
+
+                            public double nextDouble() throws IOException {
+                                return in.nextDouble();
+                            }
+
+                            public long nextLong() throws IOException {
+                                return in.nextLong();
+                            }
+
+                            public int nextInt() throws IOException {
+                                return in.nextInt();
+                            }
+
+                            public void close() throws IOException {
+                                in.close();
+                            }
+
+                            public void skipValue() throws IOException {
+                                JsonToken token = in.peek();
+                                if (token == JsonToken.STRING) {
+                                    otherKeys.put(lastName, in.nextString());
+                                } else {
+                                    in.skipValue();
+                                }
+                            }
+
+                            @NonNull
+                            @Override
+                            public String toString() {
+                                return in.toString();
+                            }
+
+                            public String getPath() {
+                                return in.getPath();
+                            }
+                        };
+                        T output = adapter.read(jsonReader);
+                        ((IHasExtraParameters) output).setExtraParameters(Collections.unmodifiableMap(otherKeys).entrySet());
+                        return output;
+                    }
+                };
+            }
+            return null;
+        }
+    }
 
     private ObjectMapper() {
         // Utility class.
@@ -59,7 +188,7 @@ public final class ObjectMapper {
      * @return JSON string
      */
     public static String serializeObjectToJsonString(Object object) {
-        return new Gson().toJson(object);
+        return GSON.toJson(object);
     }
 
     /**
@@ -84,7 +213,11 @@ public final class ObjectMapper {
      * @return object
      */
     public static <T> T deserializeJsonStringToObject(String json, Class<T> objectClass) {
-        return new Gson().fromJson(json, objectClass);
+        T value = GSON.fromJson(json, objectClass);
+        if (IHasExtraParameters.class.isAssignableFrom(objectClass)) {
+
+        }
+        return value;
     }
 
     /**
@@ -100,7 +233,7 @@ public final class ObjectMapper {
         String json = ObjectMapper.serializeObjectToJsonString(object);
         Type stringMap = new TypeToken<TreeMap<String, String>>() {
         }.getType();
-        TreeMap<String, String> fields = new Gson().fromJson(json, stringMap);
+        TreeMap<String, String> fields = GSON.fromJson(json, stringMap);
         if (object instanceof IHasExtraParameters) {
             final IHasExtraParameters params = (IHasExtraParameters) object;
             if (params.getExtraParameters() != null) {
@@ -140,7 +273,7 @@ public final class ObjectMapper {
 
         // Suppressing unchecked warnings due to casting of type Map to Map<String, Object>
         @SuppressWarnings(WarningType.unchecked_warning)
-        Map<String, Object> objectHashMap = new Gson().fromJson(json, Map.class);
+        Map<String, Object> objectHashMap = GSON.fromJson(json, Map.class);
 
         return objectHashMap;
     }
